--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "author": "Jorge Acero",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "babel-plugin-import-graphql": "^2.7.0",
     "nodemon": "^2.0.2",
     "uuid": "^3.4.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "fastify": "^2.11.0",
-    "fastify-gql": "^3.0.0",
+    "fastify": "^2.12.0",
+    "fastify-cors": "^3.0.1",
+    "fastify-gql": "^3.0.6",
+    "firebase": "^7.9.1",
+    "firebase-admin": "^8.9.2",
+    "graphql": "^14.6.0",
     "graphql-jit": "^0.4.2",
     "graphql-tools": "^4.0.6"
   }
